Added Player Class and Movement

--- a/Source/ReEngine.vcxproj.filters
+++ b/Source/ReEngine.vcxproj.filters
@@ -10,6 +10,9 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AppClass.h">
@@ -17,6 +20,9 @@
     </ClInclude>
     <ClInclude Include="..\res\Resource.h">
       <Filter>Resource files</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
